--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-pip install bokeh
-pip install numpy
-pip install matplotlib
+pip install bokeh v1.0.1
+pip install numpy v1.15
+pip install matplotlib v3.0.2
